Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <section id="main_content" class="inner">
         <p><img src="http://www.ictemc.org/uploadfile/2014/0508/20140508021829709.jpg" alt=""></p>
 
-<p>祝首都师范大学检测成像实验室新春快乐，吃好，喝好，玩好！</p>
+<h1>
+<a id="祝首都师范大学检测成像实验室新春快乐吃好喝好玩好" class="anchor" href="#%E7%A5%9D%E9%A6%96%E9%83%BD%E5%B8%88%E8%8C%83%E5%A4%A7%E5%AD%A6%E6%A3%80%E6%B5%8B%E6%88%90%E5%83%8F%E5%AE%9E%E9%AA%8C%E5%AE%A4%E6%96%B0%E6%98%A5%E5%BF%AB%E4%B9%90%E5%90%83%E5%A5%BD%E5%96%9D%E5%A5%BD%E7%8E%A9%E5%A5%BD" aria-hidden="true"><span class="octicon octicon-link"></span></a>祝首都师范大学检测成像实验室新春快乐，吃好，喝好，玩好！</h1>
 
 <p><img src="http://down1.sucaitianxia.com/psd02/psd161/psds28970.jpg" alt=""></p>
       </section>
